@@ -1179,3 +1179,5 @@ version 8.20.2 (2021-02-03)
       doesn't match the expected for the ESxxx algorithm (iss #399).
     * Fixes time unit conversion in DefaultJWKSetCache.getLifespan and
       getRefreshTime (iss #384).
+    * Prevent instantiation of unneeded new SecureRandom in
+      DefaultJWSVerifierFactory to save resources (iss #385).
